--- a/views/users.ejs
+++ b/views/users.ejs
@@ -115,6 +115,9 @@
 <% include model/bottom.ejs %>
 <script src="/js/bundle.js"></script>
 <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script>
+	weiboApp.initNavBar("<%= type %>");
+</script>
 </body>
 </html>
 
