--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,6 +70,9 @@
 </div>
 <script src="/js/bundle.js"></script>
 <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script>
+	weiboApp.initNavBar("<%= type %>");
+</script>
 </body>
 </html>
 
