--- a/views/model/top.ejs
+++ b/views/model/top.ejs
@@ -2,10 +2,10 @@
     <div class="pull-left top_icon"><img class="img-rounded img-responsive" src="/images/icon.png"></div>
     <form class="navbar-form pull-left" role="search" action="/search" method="GET">
         <div class="input-group search_input ">
-            <input type="text" name="keyword" placeholder="SEARCH" class="form-control input-sm"
+            <input type="text" name="keyword" placeholder="SEARCH" class="form-control "
                    placeholder="Search"/>
                <span class="input-group-btn">
-                   <button type="submit" class="btn btn-default btn-sm">Go</button>
+                   <button type="submit" class="btn btn-default">Go</button>
                    </span>
         </div>
 
